<resources>
    <string name="app_name">OrderApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Intelli Cart</string>
    <string name="nav_header_subtitle">Say it, and your\ngroceries are on the way</string>
    <string name="SERVER_TESTING_DOMAIN">orca-positive-lightly.ngrok-free.app</string>
    <string name="SERVER_PRODUCTION_DOMAIN">alright-gwendolen-intellicart-343c167c.koyeb.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="font1">courier new</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout">Logout</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="continue_">Continue</string>
    <string name="ADDED">ADDED TO CART</string>
    <string name="tomato">Tomato</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">WELCOME</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">username</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="intelli_cart_nsay_it_your_groceries_are_on_the_way">Say it, that\'s all\nyour groceries are on the way</string>
    <string name="login_succeed">LOGIN SUCCEED</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_voice">\n search by voice\n</string>
    <string name="search">Search</string>
    <string name="item_details">ITEM DETAILS</string>
    <string name="add_to_cart6">add to cart</string>
    <string name="add_to_cartt">add to cart</string>
    <string name="sign_up_textview">$(sign_up_textView)</string>
    <string name="new_password">new password</string>
    <string name="customer_register">CUSTOMER REGISTER</string>
    <string name="todo">TODO</string>
    <string name="email_address">email address</string>
    <string name="create_account">Create account</string>
    <string name="v_gmail_com">v@gmail.com</string>
    <string name="_123456">123456</string>
    <string name="icart">iCART</string>
    <string name="cart">Cart</string>
    <string name="signing_in">signing in…</string>
    <string name="signin_failed">sign in failed!</string>
    <string name="bypass_auth_debugmode_enable">bypass auth.</string>
    <string name="v_cart">v-cart</string>
    <string name="m_cart">m-cart</string>
    <string name="loading_v_cart">loading v-cart…</string>
    <string name="loading_m_cart">loading m-cart…</string>
    <string name="loading">loading…</string>
    <string name="unable_to_load">Unable to load.</string>
    <string name="connecting_to_database">connecting to database…</string>
    <string name="unable_to_fetch_data">unable to fetch data!</string>
    <string name="image">IMAGE</string>
    <string name="voice">VOICE</string>
    <string name="order_by_image">ORDER BY IMAGE</string>
    <string name="press_amp_order"><![CDATA[press & order]]></string>
    <string name="loading_ai_models">loading ai models…</string>
    <string name="release_to_stop">Release to Stop</string>
    <string name="press_hold_to_record"><![CDATA[Press & hold to record…]]></string>
    <string name="tap_hold"><![CDATA[Tap & hold this button to record, please say item name followed by quantity & continue]]></string>
    <string name="order_by_voice">Order by Voice</string>
    <string name="loading_order_by_voice_feature">loading order-by-voice feature…</string>
    <string name="loading_advance_ai_models">loading advance-ai models…</string>
    <string name="order_placed">Order placed</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="recording">recording audio…</string>
    <string name="uploading_to_server">uploading to server…</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="scanning">scanning…</string>
    <string name="scan_image">Scan Image</string>
    <string name="scan_imagee">Scan Image</string>
    <string name="introducing_advance_ai_feature">introducing a new feature</string>
    <string name="itemdescp">$(itemName)</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pin_code_is_not_valid">Pin code is not valid.</string>
    <string name="details_of_pin_code_is">Details of pin code is : \n</string>
    <string name="json_error">JSON Error!</string>
    <string name="invalid_pincode">Invalid Pincode</string>
    <string name="getaddress_replicate">$(getAddress).replicate()</string>
    <string name="about_us">About us</string>
    <string name="my_cart">My Cart</string>
    <string name="title_activity_checkout_pay">CheckoutPayActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="select_a_delivery_address">Select a delivery address</string>
    <string name="proceed_to_payment">Place Order</string>
    <string name="logout_options">Logout Options</string>
    <string name="voice_cart">Voice Cart</string>
    <string name="manual_cart">Manual Cart</string>
    <string name="user_cart">User Cart</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="server_offline">server offline!</string>
    <string name="contacting_server">contacting server…</string>
    <string name="fetching_data">fetching data…</string>
    <string name="server_offline1">SERVER OFFLINE!</string>
    <string name="connecting_to_server">connecting to server…</string>
    <string name="taking_longer_than_usual">taking longer than usual…</string>
    <string name="waiting_for_response">waiting for response…</string>
    <string name="finding_perfects_shops">Finding nearby shops…</string>
    <string name="shops">Shops</string>
    <string name="see_all"><u>see all</u></string>
    <string name="see_less"><u>see less</u></string>
    <string name="no_nearby_shops_found">No nearby shops found!</string>
    <string name="try_order_by_voice"><u>Order By Voice</u></string>
    <string name="uploading_to_db">uploading to db…</string>
    <string name="qty">$(qty)</string>
    <string name="getref_db_getaddress">$(getRef(db).getAddress())</string>
    <string name="enter_your_regi">Enter your registered email address and associated password to login</string>
    <string name="address">Address:</string>
    <string name="pin_code">Pin code</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="Please_wait">Please wait…</string>
    <string name="please_wait">please wait…</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="enter_the_email_address">Enter the email address:</string>
    <string name="enter_a_new">Enter new email and password to register with us. Remember password for future logins.</string>
    <string name="length_should_be_6_or_more">Length should be more than 6 chars</string>
    <string name="fields_can_t_be_empty">Fields can\'t be empty</string>
    <string name="please_enter_the_email_id">Please enter the email-ID</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="verify_login_again"><![CDATA[Verify & login again]]></string>
    <string name="email_address_has_already_taken">Email address has already taken</string>
    <string name="registration_successful">Registration successful</string>
    <string name="authentication_fail">Authentication failed!</string>
    <string name="email_verification_link_sent">Email verification link sent successfully</string>
    <string name="please_verify_your_email_id">Please verify your email address</string>
    <string name="user_login">USER LOGIN</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="checking">Checking…</string>
    <string name="intellicart_order_app">INTELLICART ORDER APP</string>
    <string name="delete_acc">Delete Account</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="send_link">SEND LINK</string>
    <string name="enter_your_reg">Enter your registered email address to get the password reset link</string>
    <string name="enter_the_registered_email">Enter the registered email:</string>
    <string name="landmark">Landmark</string>
    <string name="select_address_type">Select address type:</string>
    <string name="set_this_as_my_default_address">Set this as my default address</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="name">Full name</string>
    <string name="add_a_new_address">Add a delivery address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_delivery_address">Enter your delivery address</string>
    <string name="street_address">Street address</string>
    <string name="enter_your_pincode">Enter pincode</string>
    <string name="phone_no">Phone no</string>
    <string name="use_the_below_form_to_add_you">Use the form below to add a new delivery address. You can save preferred stores for this address further.</string>
    <string name="enter_phone_no">Enter phone no</string>
    <string name="order_from_preferred_store_i">Order from preferred store is currently active, toggle off this setting to get storePrefDataModel recommendations for address.</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="use_default_address_for_delivery">Use default address for delivery.</string>
    <string name="checkout_summary">Checkout Summary</string>
    <string name="cancel">Cancel</string>
</resources>