<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addNewAddressLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.address.add_address.AddAddressFragment">

    <TextView
        android:id="@+id/authBanner_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/archivo_black"
        android:lineSpacingExtra="5dp"
        android:paddingHorizontal="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/add_a_new_address"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/use_the_below_form_to_add_you"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authBanner_textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/addNewAddress_cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B2FBF7F7"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Your form content here -->

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/enter_your_name"
                    android:textColor="#6750A3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameNewAddress_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:alpha="1.5"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/enter_your_delivery_address"
                    android:textColor="#6750A3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/streetNewAddress_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:alpha="1.5"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/street_address"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:text="vishnu vihar, kaithakuzhi, erattukulam PO, (via) elappulli"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="Enter any nearby landmarks"
                    android:textColor="#6750A3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/landmarkNewAddress_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/landmark"
                    android:inputType="textMultiLine"
                    android:paddingStart="1dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView28"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/enter_your_pincode"
                            android:textColor="#6750A2"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView36"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="2"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/enter_phone_no"
                            android:textColor="#6750A2"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/pincode_textBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center"
                            android:hint="@string/pin_code"
                            android:inputType="number"
                            android:paddingStart="10dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/phoneNumber_editTextText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="2"
                            android:ems="10"
                            android:fontFamily="@font/montserrat"
                            android:hint="@string/phone_no"
                            android:inputType="phone"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/postOffValidateName_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textColor="#146131"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/cityStateView_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="courier new"
                        android:textColor="#9F9A9A"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spinner_district"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/select_address_type"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/addressType_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/homeType_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/home"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/workType_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/work"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/otherType_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/other"
                        android:textAlignment="textStart"
                        android:textStyle="bold" />

                </RadioGroup>

                <CheckBox
                    android:id="@+id/setAsDefaultAddressBool_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/set_this_as_my_default_address"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/addFragLocationView_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anonymous_pro"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/addNewAddress_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#3E9A41"
                    android:elevation="5dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/add_address"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
