<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.checkout.CheckoutSummaryFragment">

    <TextView
        android:id="@+id/proceedFromCheckout_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#043359"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingTop="16sp"
        android:paddingBottom="16sp"
        android:text="@string/proceed_to_payment"
        android:textAllCaps="true"
        android:textColor="#FFC519"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/baseline_navigate_next_24"
        app:drawableTint="#FFC519"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/checkout_summary"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/setDefaultAsDelivery_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:checked="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/use_default_address_for_delivery"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/proceedFromCheckout_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>