<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ThemeOverlay.Material3.DayNight.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24sp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="Store preference is active"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="#323232"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/order_from_preferred_store_i"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16sp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goToSettingsButton"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/go_to_settings"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
